trunk/Archive2/79/2775fd4175763f/output
main.cpp:3:30: error: missing default argument on parameter 'j'
    void foo(int i = 42, int j);
                             ^
1 error generated.
