trunk/Archive2/79/2775fd4175763f/main.cpp
struct A
{
    void foo(int i = 42, int j);
};

void A::foo(int i, int j = 56){ };

int main(){  }